--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 	  <div id="menubar">
         <ul id="nav">
           <li class="current"><a href="index.html">Home</a></li>
-          <li><a href="ourwork.html">Our Work</a></li>
-          <li><a href="testimonials.html">Testimonials</a></li>
-          <li><a href="projects.html">Projects</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
+          <li><a href="about-youcan.html">About YouCAN</a></li>
+          <li><a href="youth-leadership.html">Youth Leadership</a></li>
+          <li><a href="events.html">Events</a></li>
+          <li><a href="contact-us.html">Contact Us</a></li>
         </ul>
       </div><!--close menubar-->	
     </nav>	
@@ -47,14 +47,15 @@
 	
 	  <div id="content">
         <div class="content_item">
-		  <h1>Welcome To Your Website</h1> 
-          <p>This standards compliant, simple, fixed width website template is released as an 'open source' design (under the Creative Commons Attribution 3.0 Licence), which means that you are free to download and use it for anything you want (including modifying and amending it). If you wish to remove the &ldquo;website template by Free HTML5 Templates&rdquo;, all I ask is for a donation of &pound;20.00 GBP. Please feel free to contact me with any questions you may have about my free HTML5 website templates or bespoke work.</p>   		
+		  <h1>How can I help fight climate change in Corvallis?</h1> 
+          <p>You CAN help fight climate change: advocate for a Corvallis Climate Recovery Ordinance and <b>binding GHG emission reduction targets</b>. Local government must help us transition off fossil fuels and adapt to a changing climate. We simply need to ask the city to ensure protection of the atmosphere for future generations.</p>   		
 		  
 		  <div class="content_imagetext">
 		    <div class="content_image">
 		      <img src="images/image1.jpg" alt="image1"/>
 	        </div>
-		    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi elit sapien, tempus sit amet hendrerit volutpat, euismod vitae risus. Etiam consequat, sem et vulputate dapibus, diam enim tristique est, vitae porta eros mauris ut orci. Praesent sed velit odio. Ut massa arcu, suscipit viverra molestie at, aliquet a metus. Nullam sit amet tellus dui, ut tincidunt justo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec iaculis egestas laoreet. Nunc non ipsum metus, non laoreet urna. Vestibulum quis risus quis diam mattis tempus. Vestibulum suscipit pretium tempor. </p>
+              <h2>What is YouCAN Corvallis?</h2>
+              <p>Youth Climate Action Now is a state-wide movement to empower youth and young adults to have their voices heard about their future and climate change. We are starting this movement in Corvallis because we believe that it is our time to set an example for other cities and states. </p>
 		  </div><!--close content_imagetext-->
 		  
 		  <div class="content_container">
