--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
 
 	<nav>
 	  <div id="menubar">
-        <ul id="nav">
+	  	<link rel="stylesheet" type="text/html" href="html/menu.html" />
+        <!--<ul id="nav">
           <li class="current"><a href="index.html">Home</a></li>
           <li><a href="about-youcan.html">About YouCAN</a></li>
           <li><a href="youth-leadership.html">Youth Leadership</a></li>
           <li><a href="events.html">Events</a></li>
           <li><a href="contact-us.html">Contact Us</a></li>
-        </ul>
+        </ul>-->
       </div><!--close menubar-->	
     </nav>	
     
