--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <!-- modernizr enables HTML5 elements and feature detects -->
   <script type="text/javascript" src="js/modernizr-1.5.min.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+  <script src="js/jquery.js"></script>
   <script src="js/dropit.js"></script>
   <link rel="stylesheet" href="css/dropit.css" type="text/css" />
 </head>
