--- a/index.html
+++ b/index.html
@@ -7,12 +7,18 @@
   <meta name="keywords" content="website keywords, website keywords" />
   <meta http-equiv="content-type" content="text/html; charset=windows-1252" />
   <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <link rel="stylesheet" href="css/dropit.css" type="text/css" />
   <!-- modernizr enables HTML5 elements and feature detects -->
   <script type="text/javascript" src="js/modernizr-1.5.min.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
-  <script src="js/jquery.js"></script>
-  <script src="js/dropit.js"></script>
-  <link rel="stylesheet" href="css/dropit.css" type="text/css" />
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+  <script type="text/javascript" src="js/jquery.js"></script>
+  <script type="text/javascript" src="js/dropit.js"></script>
+  <script>
+    $(document).ready(function() {
+        $(\'.menu\').dropit();
+    });
+  </script>
+  
 </head>
 
 <body>
@@ -30,7 +36,7 @@
 
 	<nav>
 	  <div id="menubar">
-	    <ul id="nav">
+	    <ul id="nav" "menu">
               <li class="current"><a href="index.html">Home</a></li>
               <li><a href="about-youcan.html">About YouCAN</a></li>
               <li><a href="youth-leadership.html">Youth Leadership</a></li>
