--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
               <li class="current"><a href="index.html">Home</a></li>
               <li><a href="about-youcan.html">About YouCAN</a></li>
               <li><a href="youth-leadership.html">Youth Leadership</a></li>
-              <li><a href="events.html">Events</a></li>
+              <li><a href="#">Events</a></li>
                 <ul>
-                  <li><a href="">Calendar</a></li>
-                  <li><a href="">Trainings</a></li>
-                  <li><a href="">Meetings</a></li>
-                  <li><a href="">Social</a></li>
+                  <li><a href="#">Calendar</a></li>
+                  <li><a href="#">Trainings</a></li>
+                  <li><a href="#">Meetings</a></li>
+                  <li><a href="#">Social</a></li>
                 </ul>
               <li><a href="contact-us.html">Contact Us</a></li>
             </ul>
