--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 	<nav>
 	  <div id="menubar">
-	    <ul id="nav" "menu">
+	    <ul id="nav menu">
               <li class="current"><a href="index.html">Home</a></li>
               <li><a href="about-youcan.html">About YouCAN</a></li>
               <li><a href="youth-leadership.html">Youth Leadership</a></li>
