--- a/index.html
+++ b/index.html
@@ -19,6 +19,35 @@
     });
   </script>
   
+  <style>
+.menu ul { display: none; } /* Hide before plugin loads */
+li { list-style: none; } 
+a { text-decoration: none; } 
+.menu ul.dropit-submenu {
+    background-color: #fff;
+    border: 1px solid #b2b2b2;
+    padding: 6px 0;
+    margin: 3px 0 0 1px;
+    -webkit-border-radius: 3px;
+       -moz-border-radius: 3px;
+            border-radius: 3px;
+    -webkit-box-shadow: 0px 1px 3px rgba(0,0,0,0.15);
+       -moz-box-shadow: 0px 1px 3px rgba(0,0,0,0.15);
+            box-shadow: 0px 1px 3px rgba(0,0,0,0.15);
+}          
+.menu ul.dropit-submenu a {
+    display: block;
+    font-size: 14px;
+    line-height: 25px;
+    color: #7a868e;
+    padding: 0 18px;
+}
+.menu ul.dropit-submenu a:hover {
+    background: #248fc1;
+    color: #fff;
+    text-decoration: none;
+}
+</style>
 </head>
 
 <body>
@@ -36,7 +65,7 @@
 
 	<nav>
 	  <div id="menubar">
-	    <ul id="nav menu">
+	    <ul id="nav">
               <li class="current"><a href="index.html">Home</a></li>
               <li><a href="about-youcan.html">About YouCAN</a></li>
               <li><a href="youth-leadership.html">Youth Leadership</a></li>
@@ -51,7 +80,17 @@
             </ul>
       </div><!--close menubar-->	
     </nav>	
-    
+    <ul class="menu">
+    <li>
+        <a href="#" class="btn">Class &#9658;</a>
+        <ul>
+            <li><a href="#">Class 1</a></li>
+            <li><a href="#">Class 2</a></li>
+            <li><a href="#">Class 3</a></li>
+            <li><a href="#">Class 4</a></li>
+        </ul>
+    </li>
+</ul>
 	<div id="site_content">	
 
       <div class="slideshow">
