--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ a { text-decoration: none; }
 	  <div id="menubar">
 	    <ul id="nav">
               <li class="current"><a href="index.html">Home</a></li>
-              <li><a href="about-youcan.html">About YouCAN</a></li>
+              <li><a href="test/dropdown.html">About YouCAN</a></li>
               <li><a href="youth-leadership.html">Youth Leadership</a></li>
               <li><a href="#">Events</a></li>
                 <ul>
