--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <script type="text/javascript" src="js/dropit.js"></script>
   <script>
     $(document).ready(function() {
-        $(\'.menu\').dropit();
+        $('.menu').dropit();
     });
   </script>
   
