--- a/test/dropdown.html
+++ b/test/dropdown.html
@@ -24,4 +24,10 @@
       </ul>
     </li>
   </ul>
+  
+  <script>
+    $(document).ready(function() {
+      $('.menu').dropit({action:'mouseenter'});
+    });
+  </script>
 </body>
