--- a/test/dropdown.html
+++ b/test/dropdown.html
@@ -3,7 +3,7 @@
 
 <head>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
-  <script src="dropit.js"></script>
+  <script src="/js/dropit.js"></script>
   <link rel="stylesheet" href="dropit.css" type="text/css" />
   <script>
     $(document).ready(function() {
