--- a/index.html
+++ b/index.html
@@ -7,43 +7,14 @@
   <meta name="keywords" content="website keywords, website keywords" />
   <meta http-equiv="content-type" content="text/html; charset=windows-1252" />
   <link rel="stylesheet" type="text/css" href="css/style.css" />
-  <link rel="stylesheet" href="css/dropit.css" type="text/css" />
+  <link rel="stylesheet" href="/css/dropit.css" type="text/css" />
   <!-- modernizr enables HTML5 elements and feature detects -->
   <script type="text/javascript" src="js/modernizr-1.5.min.js"></script>
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
-  <script type="text/javascript" src="js/jquery.js"></script>
-  <script type="text/javascript" src="js/dropit.js"></script>
+  <!--<script type="text/javascript" src="js/jquery.js"></script> -->
+  <script type="text/javascript" src="/js/dropit.js"></script>
   
   
-  <style>
-.menu ul { display: none; } /* Hide before plugin loads */
-li { list-style: none; } 
-a { text-decoration: none; } 
-.menu ul.dropit-submenu {
-    background-color: #fff;
-    border: 1px solid #b2b2b2;
-    padding: 6px 0;
-    margin: 3px 0 0 1px;
-    -webkit-border-radius: 3px;
-       -moz-border-radius: 3px;
-            border-radius: 3px;
-    -webkit-box-shadow: 0px 1px 3px rgba(0,0,0,0.15);
-       -moz-box-shadow: 0px 1px 3px rgba(0,0,0,0.15);
-            box-shadow: 0px 1px 3px rgba(0,0,0,0.15);
-}          
-.menu ul.dropit-submenu a {
-    display: block;
-    font-size: 14px;
-    line-height: 25px;
-    color: #7a868e;
-    padding: 0 18px;
-}
-.menu ul.dropit-submenu a:hover {
-    background: #248fc1;
-    color: #fff;
-    text-decoration: none;
-}
-</style>
 </head>
 
 <body>
