--- a/test/dropdown.html
+++ b/test/dropdown.html
@@ -4,7 +4,7 @@
 <head>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
   <script src="/js/dropit.js"></script>
-  <link rel="stylesheet" href="dropit.css" type="text/css" />
+  <link rel="stylesheet" href="/css/dropit.css" type="text/css" />
 </head>
 
 <body>
