--- a/test/dropdown.html
+++ b/test/dropdown.html
@@ -20,6 +20,7 @@
     </li>
   </ul>
   
+  <div class="stuff">stuff here</div>
   <script>
     $(document).ready(function() {
       $('.menu').dropit({action:'mouseenter'});
