--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 	<nav>
 	  <div id="menubar">
-	    <ul id="nav">
+	    <ul id="nav menu">
               <li class="current"><a href="index.html">Home</a></li>
               <li><a href="test/dropdown.html">About YouCAN</a></li>
               <li><a href="youth-leadership.html">Youth Leadership</a></li>
