--- a/test/dropdown.html
+++ b/test/dropdown.html
@@ -6,8 +6,8 @@
   <script src="/js/dropit.js"></script>
   <!--<link rel="stylesheet" href="/css/dropit.css" type="text/css" />-->
   <style>
-    .menu {display:inline;}
-    .submenu {display:block;}
+    ul#menu li {display:inline;}
+    ul#submenu li {display:block;}
   </style>
 </head>
 
