--- a/test/dropdown.html
+++ b/test/dropdown.html
@@ -13,7 +13,7 @@
 
 <body>
   <ul class="menu">
-    <li><a href="#">regular</a></li>
+    <li><a href="#">Regular</a></li>
     <li><a href="#">dropdown</a>
       <ul class='submenu'>
         <li><a href="#">Some Action 1</a></li>
