--- a/test/dropdown.html
+++ b/test/dropdown.html
@@ -6,7 +6,7 @@
   <script src="/js/dropit.js"></script>
   <!--<link rel="stylesheet" href="/css/dropit.css" type="text/css" />-->
   <style>
-    ul#menu li {display:inline;}
+    ul#menu li {display:inline; list-style:none;}
     ul#submenu li {display:block;}
   </style>
 </head>
