--- a/index.html
+++ b/index.html
@@ -32,38 +32,30 @@
 	<nav>
 	  <div id="menubar">
 	    <ul id="nav menu">
-              <li class="current"><a href="index.html">Home</a></li>
-              <li><a href="test/dropdown.html">About YouCAN</a></li>
-              <li><a href="youth-leadership.html">Youth Leadership</a></li>
-              <li><a href="#">Events</a></li>
-                <ul>
-                  <li><a href="#">Calendar</a></li>
-                  <li><a href="#">Trainings</a></li>
-                  <li><a href="#">Meetings</a></li>
-                  <li><a href="#">Social</a></li>
-                </ul>
-              <li><a href="contact-us.html">Contact Us</a></li>
-            </ul>
-      </div><!--close menubar-->	
-    </nav>	
-    <ul class="menu">
-      <li><a href="#" class="btn">Class &#9658;</a>
-        <ul>
-            <li><a href="#">Class 1</a></li>
-            <li><a href="#">Class 2</a></li>
-            <li><a href="#">Class 3</a></li>
-            <li><a href="#">Class 4</a></li>
-        </ul>
-      </li>
-    </ul><!--close test menu-->
-	<div id="site_content">	
+        <li class="current"><a href="index.html">Home</a></li>
+        <li><a href="test/dropdown.html">About YouCAN</a></li>
+        <li><a href="youth-leadership.html">Youth Leadership</a></li>
+        <li>
+          <a href="#">Events<span class="arrow">&#9660;</span></a>
+          <ul class=s'submenu'>
+            <li><a href="#">Calendar</a></li>
+            <li><a href="#">Trainings</a></li>
+            <li><a href="#">Meetings</a></li>
+            <li><a href="#">Social</a></li>
+           </ul>
+        </li>
+        <li><a href="contact-us.html">Contact Us</a></li>
+      </ul>
+    </div><!--close menubar-->	
+  </nav>
+  <div id="site_content">	
 
-      <div class="slideshow">
+    <div class="slideshow">
 	    <ul class="slideshow">
-          <li class="show"><img width="900" height="250" src="images/home_1.jpg" alt="&quot;Enter your caption here&quot;" /></li>
-          <li><img width="900" height="250" src="images/home_2.jpg" alt="&quot;Enter your caption here&quot;" /></li>
-        </ul> 
-	  </div>	
+        <li class="show"><img width="900" height="250" src="images/home_1.jpg" alt="&quot;Enter your caption here&quot;" /></li>
+        <li><img width="900" height="250" src="images/home_2.jpg" alt="&quot;Enter your caption here&quot;" /></li>
+      </ul> 
+	  </div><!-- close slideshow-->
 	
 	  <div id="content">
         <div class="content_item">
@@ -99,7 +91,7 @@
 		  
 		</div><!--close content_item-->
       </div><!--close content-->   
-	</div><!--close site_content-->  	
+    </div><!--close site_content-->  	
   </div><!--close main-->
   
     <footer>
@@ -111,12 +103,12 @@
   <script type="text/javascript" src="js/jquery.js"></script>
   <script type="text/javascript" src="js/image_slide.js"></script>
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
-  <!--<script type="text/javascript" src="js/jquery.js"></script> -->
+  <script type="text/javascript" src="js/jquery.js"></script> 
   <script type="text/javascript" src="/js/dropit.js"></script>
   
   <script>
     $(document).ready(function() {
-        $('.menu').dropit({action:'mouseenter'});
+      $('.menu').dropit({action:'mouseenter'});
     });
   </script>
 </body>
