--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <li><a href="test/dropdown.html">About YouCAN</a></li>
         <li><a href="youth-leadership.html">Youth Leadership</a></li>
         <li>
-          <a href="#">Events<span class="arrow">&#9660;</span></a>
-          <ul class=s'submenu'>
+          <a href="#">myEvents<span class="arrow">&#9660;</span></a>
+          <ul class="submenu">
             <li><a href="#">Calendar</a></li>
             <li><a href="#">Trainings</a></li>
             <li><a href="#">Meetings</a></li>
