--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 	<nav>
 	  <div id="menubar">
-	    <ul id="nav menu">
+	    <ul id="nav">
         <li class="current"><a href="index.html">Home</a></li>
         <li><a href="test/dropdown.html">About YouCAN</a></li>
         <li><a href="youth-leadership.html">Youth Leadership</a></li>
