--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
 	  </div><!--close banner-->
     </header>
 
-	<nav>
+	<nav class"mymenu">
 	  <div id="menubar">
-	    <ul id="nav">
+	    <ul id="nav clearfix">
         <li class="current"><a href="index.html">Home</a></li>
         <li><a href="test/dropdown.html">About YouCAN</a></li>
         <li><a href="youth-leadership.html">Youth Leadership</a></li>
         <li>
-          <a href="#">myEvents<span class="arrow">&#9660;</span></a>
-          <ul class="submenu">
+          <a href="#">Events<span class="arrow">&#9660;</span></a>
+          <ul class="sub-menu">
             <li><a href="#">Calendar</a></li>
             <li><a href="#">Trainings</a></li>
             <li><a href="#">Meetings</a></li>
