--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	  </div><!--close banner-->
     </header>
 
-	<nav class"mymenu">
+	<nav>
 	  <div id="menubar">
 	    <ul id="nav clearfix">
         <li class="current"><a href="index.html">Home</a></li>
