--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<nav>
 	  <div id="menubar">
 	    <ul id="nav clearfix">
-        <li class="current"><a href="index.html">Home</a></li>
+        <li class="current"><a href="index.html">HOME</a></li>
         <li><a href="test/dropdown.html">About YouCAN</a></li>
         <li><a href="youth-leadership.html">Youth Leadership</a></li>
         <li>
