--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
 	<nav>
 	  <div id="menubar">
-	    <ul id="nav clearfix">
-        <li class="current"><a href="index.html">HOME</a></li>
+	    <ul id="nav">
+        <li class="current"><a href="index.html">Home</a></li>
         <li><a href="test/dropdown.html">About YouCAN</a></li>
         <li><a href="youth-leadership.html">Youth Leadership</a></li>
         <li>
