delete Who we are paragraph

--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
 		
 		<div class="cd-container" style="margin-top: 10rem;">
 			<h4 style="color: rgb(212,175,55);">Who We Are</h4>
-			<h1>The Amazing People Behind This</h1>
-			<p>Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum.</p>
+			<h1>Our Leadership Team</h1>
+			<p> </p>
 			
 			<div class="cd-container-people">
 				<div class="cd-container-people-clmn-1">
