add contact info, map, and sierra test paragraph

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 					<div class="cd-container-people-info">
 						<h4>Outreach Coordinator</h4>
 						<h2>Sierra Laverty</h2>
-						<p>Lorem ipsum dolor sit amet, conse tetuer adi piscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore.</p>
+						<p>Being from Idaho and growing up surrounded by activits, organizing for positive change in the community comes natural for Sierra. Ultimately, her goal is to help implament sustainable agriculture around the country, and talking to local goverments is a great way to start!</p>
 					</div>
 				</div>
 			</div>
@@ -144,7 +144,7 @@
 <!-- Section 3 (We Like To Write) -->
 	
 		<div class="cd-container" style="margin-top: 10rem;">
-			<h4 style="color: rgb(212,175,55);">Last Post</h4>
+			<h4 style="color: rgb(212,175,55);">Campaign Updates</h4>
 			<h1>What have we been up to?</h1>
 
 			
@@ -171,8 +171,9 @@
 <!-- Section 4 (Work With Us) -->
 	
 		<div class="cd-container">
-			<h4 style="color: rgb(212,175,55);">Contact Us</h4>
+			<h4 style="color: rgb(212,175,55);">Meeting Times</h4>
 			<h1>Work With Us</h1>
+            <p>Our team meets on the first Tuesday of the month at New Morning Bakery in Corvallis at 7pm. We welcome anyone who is interested in learning about what we do and where we are at in the process. People new to Corvallis and action on climate are encouraged to stop by. </p>
 
 			
 			<div class="cd-container-contact">
@@ -181,23 +182,27 @@
 						<div id="google-container"></div>
 						<div id="cd-zoom-in"></div>
 						<div id="cd-zoom-out"></div>
-						<address>Rua Serpa Pinto, Lisbon, Portugal</address> 
+						<address>New Morning Bakery, Corvallis</address> 
 					</section>
 				</div>
 				<div class="cd-container-contact-clmn-2" style="padding-bottom: 0px;">
 					<div class="contact-1">
 						<div class="contact-clmn-content">
 							<h4>Location</h4>
-							<p>Rua Serpa Pinto, Lisbon, Portugal</p>
+							<p>
+                                New Morning Bakery
+                                <br/>
+                                Corvallis, Oregon
+                            </p>
 						</div>
 					</div>
 					<div class="contact-2">
 						<div class="contact-clmn-content">
 							<h4>Phone</h4>
 							<p>
-								+88 (0) 101 0000 000
+								Aaron Kratzer
 								<br>
-								+88 (0) 101 0000 000
+								(503) 327-9232
 							</p>
 						</div>
 					</div>
@@ -206,11 +211,11 @@
 				<div class="cd-container-contact-clmn-2">
 					<div class="contact-1">
 						<div class="contact-clmn-content">
-							<h4>Fax</h4>
+							<h4>Meeting Times</h4>
 							<p>
-							   +88 (0) 202 0000 000
+							   1st Tuesday of the month
 							   <br>
-							   +88 (0) 202 0000 000
+							   
 							</p>
 						</div>
 					</div>
@@ -218,9 +223,9 @@
 						<div class="contact-clmn-content">
 							<h4>Email</h4>
 							<p>
-							   e@elegant.com
+							   aaronckratzer@gmail.com
 							   <br>
-							   c@elegant.com
+							   YouCANcorvallis@gmail.com
 							</p>
 						</div>
 					</div>
