change background, add about page

--- a/about.html
+++ b/about.html
@@ -16,11 +16,11 @@
 	<link rel="stylesheet" href="css/component.css"> <!-- Resource style -->
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
   	
-	<title>Elegance Portfolio Template</title>
+	<title>About YouCAN Corvallis</title>
 </head>
 <body>
 	<header class="cd-header">
-		<div class="cd-logo"><a href="#0"><img src="http://static.tumblr.com/1ccbc9v/0Nlnbwlt4/logo-elegant.png" alt="Logo"></a></div>
+		<div class="cd-logo"><a href="index.html"><img src="http://static.tumblr.com/1ccbc9v/0Nlnbwlt4/logo-elegant.png" alt="Logo"></a></div>
 
 		<a class="cd-primary-nav-trigger" href="#0">
 			<span class="cd-menu-text">Menu</span><span class="cd-menu-icon"></span>
@@ -61,19 +61,32 @@
 		
 
 <!-- Section 1 (Short text about) -->
-
+            <h4 style="color: rgb(212,175,55);">More about Youth Climate Action Now</h4>
 			<div class="cd-container-txt">
 				<p>
-					That's an interesting thing about design defines so much more than what products have a very minimalist way. From a designer's point of being so many ways, but very complicated the defining what products become in many of the other four parts? True simplicity. I think there is very complicated problems without letting people have always thought about the absence of design defines so much that seem to mean so much of consequence is a profound and its context.
-
-There's no other four parts? Powerpoint. Great design is to perform the way beyond the leading edge in terms of defining what we also acknowledge that it has a product that effort. Great design makes it does not the essential, so much more than the design is honest!
+					Our YouCAN (Youth Climate Action Now) program trains and supports youth and their families to engage in civic participation with local government, advocating for lasting legal protection for the atmosphere in the form of emission reduction targets and climate recovery planning in line with the best available science. The YouCAN momement kicked off by <a href="http://ourchildrenstrust.org/">Our Children's Trust</a>, an Oregon-based nonprofit organization, who's purpose is to protect earth’s natural systems for current and future generations. Through YouCAN, youth participate directly in local government decision-making and petition City Councils for adoption of locally-tailored climate recovery laws, testify in public meetings of the City Council, and advocate at work sessions with local government leaders.
+                <br><br>
+                    YouCAN began in Eugene, Oregon, where YouCAN youth successfully worked with the Eugene City Council in 2014 to pass the first-in-the-nation science-based <a href="files/14.07.28.EugeneClimateRecoveryOrdinance.pdf">Climate Recovery Ordinance</a>. Eugene's Mayor Kitty Piercy said, "YouCAN has come to us to speak about climate disruption, and to ask us to take action to protect their futures. . . I am proud of YouCAN and Our Children’s Trust who came week after week, month after month asking our city to pass an ordinance to reduce our carbon emissions. Our children encouraged us to be the first city to enact a science-based climate recovery ordinance. . . My hope is that other cities across the nation will now follow Eugene's example."
+                <br><br>
+                    YouCAN is now partnering with youth, schools, and community organizations in several cities around the Pacific Northwest to encourage them to follow in Eugene's footsteps. We are training youth and their families, teachers and supporters in these cities about youth civic engagement, science-based prescriptions for climate recovery, youth leadership, and community organizing. We support these youth, teachers and organizing partners in their advocacy for science-based government action on carbon emission reductions and climate recovery planning in their communities. We provide them with ongoing organizing, community education/outreach, and communications support, as well as in-depth consultation and training on working with their city councils for successful adoption of citywide climate recovery planning.
 				</p>
 			</div>
 		</div>
 	
+<!-- Section 2 (Video) -->
+        
+        
+        <div class="cd-container" style="margin-top: 10rem;">
+            <h1>What happened in Eugene?</h1>
+			<div class="cd-container-home-blog">
+                <iframe src="https://player.vimeo.com/video/127181835" width="700" height="393" frameborder="1" align="middle" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                <br>
+				<a href="https://vimeo.com/127181835">TRUST: The Climate Kids</a> from <a href="https://vimeo.com/ourchildrenstrust">Our Children&#039;s Trust.</a>
+			</div>
+		</div>
 
-<!-- Section 2 (Services) -->
-
+<!-- Section 3 (Services) -->
+<!--
 			<div class="cd-main-services">
 				<div class="cd-main-content-services-img">
 					<img src="http://38.media.tumblr.com/05b4c19b53f62bf5b85a2d845122f977/tumblr_na06qtTQ101tubinno1_1280.jpg">					
@@ -98,7 +111,7 @@ There's no other four parts? Powerpoint. Great design is to perform the way beyo
 				</div>
 			</div>
 
-
+-->
 		<!-- Section 3 (Footer) -->		
 
 		<div class="footer">
