--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<ul class="cd-primary-nav">
 			<li class="cd-label">Who</li>
 
-			<li><a href="#0">About Us</a></li>
+			<li><a href="about.html">About Us</a></li>
 			<li><a href="#0">Blog</a></li>
 
 			<li class="cd-label">What</li>
@@ -55,7 +55,8 @@
 
 				<div id="large-header" class="large-header">
 					<canvas id="demo-canvas"></canvas>
-                    <h1 class="main-title">Because there is no <i>second</i> <font color=rgb(155,100,55)>Earth</font></span></h1>
+                    <h1 class="main-title">The sun is setting, it's time to act...</h1>
+                    <!-- <h1 class="main-title">Because there is no <i>second</i> <font color=rgb(155,100,55)>Earth</font></span></h1>-->
 				</div>
 
 
@@ -66,11 +67,11 @@
 
 	<main id="more" class="cd-main-content" style="margin-top: 8rem;">
 		<div class="cd-container">
-			<h4 style="color: rgb(212,175,55);">Why You?</h4>
-			<h1>Share your voice with the world!</h1>
-			<p>As youth, our voice is underrepresented and under asked for in politcs and every other area of society. Yet, voices of youth continue to to be the most powerful and represent the most ambitous generation yet. As youth, it is our responsibility to show the world that we care about the climate and that they should too. YouCAN Corvallis is a campaign that involved youth in policy making sand climate activism, leveraging our talents, enthusiasm, and love for the world to shape policy decisions on a local, county, and state level. </p>
+			<h4 style="color: rgb(212,175,55);">Youth Climate Action Now</h4>
+			<h1>So share your voice with the world!</h1>
+			<p>As youth, our voice is underrepresented and under asked for in politcs and every other area of society. Yet, voices of youth continue to to be the most powerful and represent the most ambitous generation yet. As youth, it is our responsibility to show the world that we care about the climate and that they should too. Youth Climate Action Now (YouCAN) Corvallis is a campaign that involves youth in policy making sand climate activism--leveraging our talents, enthusiasm, and love for the world to shape policy decisions on a local, county, and state level. </p>
 			
-			<a href="#"><div class="read-more-btn">Read More YouCAN Corvallis</div></a>
+			<a href="about.html"><div class="read-more-btn">Read More About YouCAN Corvallis</div></a>
 		</div>
 
 
