add test page, logo

--- a/about.html
+++ b/about.html
@@ -32,23 +32,23 @@
 			<li class="cd-label">Who</li>
 
 			<li><a href="#0">About Us</a></li>
-			<li><a href="#0">Blog</a></li>
+			<li><a href="blog.html">Blog</a></li>
 
 			<li class="cd-label">What</li>
 
-			<li><a href="#0">See Our Projects</a></li>
-			<li><a href="#0">Project Page</a></li>
+			<li><a href="project.html">See Our Projects</a></li>
+			<li><a href="work.html">Project Page</a></li>
 
 			<li class="cd-label">Where</li>
 
-			<li><a href="#0">Contact Us</a></li>
+			<li><a href="contact.html">Contact Us</a></li>
 
 			<li class="cd-label">Follow us</li>
 			
-			<li class="cd-social cd-facebook"><a href="#0">Facebook</a></li>
-			<li class="cd-social cd-instagram"><a href="#0">Instagram</a></li>
-			<li class="cd-social cd-dribbble"><a href="#0">Dribbble</a></li>
-			<li class="cd-social cd-twitter"><a href="#0">Twitter</a></li>
+			<li class="cd-social cd-facebook"><a href="https://www.facebook.com/groups/455769807934340/">Facebook</a></li>
+			<!--<li class="cd-social cd-instagram"><a href="#0">Instagram</a></li>
+			<li class="cd-social cd-dribbble"><a href="#0">Dribbble</a></li>-->
+			<li class="cd-social cd-twitter"><a href="https://twitter.com/YouCANCorvallis">Twitter</a></li>
 		</ul>
 	</nav>
 
@@ -77,7 +77,7 @@
         
         
         <div class="cd-container" style="margin-top: 10rem;">
-            <h1>What happened in Eugene?</h1>
+            <h1>How did Eugene do it?</h1>
 			<div class="cd-container-home-blog">
                 <iframe src="https://player.vimeo.com/video/127181835" width="700" height="393" frameborder="1" align="middle" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                 <br>
