--- a/test.html
+++ b/test.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 	<header class="cd-header">
-		<div class="cd-logo"><a href="#0"><img src="http://static.tumblr.com/1ccbc9v/0Nlnbwlt4/logo-elegant.png" alt="Logo"></a></div>
+		<div class="cd-logo"><a href="#"><img src="https://docs.google.com/drawings/d/1M2wqWCpQ2FT3jGgM7zGs4tx4LOZO7H_FmivvNyLzB0E/pub?w=1441&h=230" alt="Logo"></a></div>
 
 		<a class="cd-primary-nav-trigger" href="#0">
 			<span class="cd-menu-text">Menu</span><span class="cd-menu-icon"></span>
@@ -32,22 +32,22 @@
 			<li class="cd-label">Who</li>
 
 			<li><a href="about.html">About Us</a></li>
-			<li><a href="#0">Blog</a></li>
+			<li><a href="blog.html">Blog</a></li>
 
 			<li class="cd-label">What</li>
 
-			<li><a href="#0">Get Involved</a></li>
-			<li><a href="#0">Events</a></li>
+			<li><a href="events.html">Events</a></li>
+			<li><a href="get-involved.html">Get Involved</a></li>
 
 			<li class="cd-label">Where</li>
 
-			<li><a href="#0">Contact Us</a></li>
+			<li><a href="contact.html">Contact Us</a></li>
 
 			<li class="cd-label">Follow us</li>
 			
 			<li class="cd-social cd-facebook"><a href="https://www.facebook.com/groups/455769807934340/">Facebook</a></li>
 			<!--<li class="cd-social cd-instagram"><a href="#0">Instagram</a></li>
-			<li class="cd-social cd-dribbble"><a href="#0">Dribbble</a></li> -->
+			<li class="cd-social cd-dribbble"><a href="#0">Dribbble</a></li>-->
 			<li class="cd-social cd-twitter"><a href="https://twitter.com/YouCANCorvallis">Twitter</a></li>
 		</ul>
 	</nav>
@@ -55,7 +55,7 @@
 
 				<div id="large-header" class="large-header">
 					<canvas id="demo-canvas"></canvas>
-                    <h1 class="main-title">The sun is setting, it's time to act...</h1>
+                    <h1 class="main-title">Young people have the power to save the planet...</h1>
                     <!-- <h1 class="main-title">Because there is no <i>second</i> <font color=rgb(155,100,55)>Earth</font></span></h1>-->
 				</div>
 
