instagram link is test.html

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 			<li class="cd-label">Follow us</li>
 			
 			<li class="cd-social cd-facebook"><a href="https://www.facebook.com/groups/455769807934340/">Facebook</a></li>
-			<!--<li class="cd-social cd-instagram"><a href="#0">Instagram</a></li>
-			<li class="cd-social cd-dribbble"><a href="#0">Dribbble</a></li> -->
+			<li class="cd-social cd-instagram"><a href="test.html">Instagram</a></li>
+			<li class="cd-social cd-dribbble"><a href="#0">Dribbble</a></li>
 			<li class="cd-social cd-twitter"><a href="https://twitter.com/YouCANCorvallis">Twitter</a></li>
 		</ul>
 	</nav>
