--- a/test.html
+++ b/test.html
@@ -71,7 +71,7 @@
 			<h1>Share your voice with the world!</h1>
 			<p>As youth, our voice is underrepresented and under asked for in politcs and every other area of society. Yet, voices of youth continue to to be the most powerful and represent the most ambitous generation yet. As youth, it is our responsibility to show the world that we care about the climate and that they should too. Youth Climate Action Now (YouCAN) Corvallis is a campaign that involves youth in policy making and climate activism--leveraging our talents, enthusiasm, and love for the world to shape policy decisions on a local, county, and state level. </p>
 			
-			<a href="about.html"><div class="read-more-btn">Read More About YouCAN Corvallis</div></a>
+			<a href="about.html"><div class="read-more-btn">Read More About <br>YouCAN Corvallis</div></a>
 		</div>
 
 
