add volunteer discriptions

--- a/contact.html
+++ b/contact.html
@@ -60,22 +60,23 @@
 
 		<div class="cd-container-contact">
 			<div class="square-1">
-				<hr style="margin-left: 2rem; margin-top: 2rem; width: 2rem; height: 4px; background-color: white; ">
-				<h2>Rua Serpa Pinto, Lisbon, Portugal</h2>
+                <img src="https://docs.google.com/drawings/d/1M2wqWCpQ2FT3jGgM7zGs4tx4LOZO7H_FmivvNyLzB0E/pub?w=1441&h=230" alt="Logo">
+                <hr style="margin-left: 2rem; margin-top: 2rem; width: 15rem; height: 4px; background-color: white; ">
+				<h2>Corvallis, Oregon</h2>
 			</div>
 			<div class="square-2">
 			</div>
 			<div class="square-3">
-				<p>Good design as little design as possible. Good design is to chance. My goal is making something memorable and especially the consumer. Good design is aesthetic. Care and aesthetic. Good design emphasises the consumer. It does not only functional.</p>
+				<p>The Youth Climate Action Now movement is growing, and we want you to be part of it! Let us know how you want to be invovled, small or large, or if your organization wants to partner with us. We're excited to hear from you!</p>
 			</div>
 			<div class="square-4">
 				<hr style="margin-left: 2rem; margin-top: 2rem; width: 2rem; height: 4px; background-color: white; ">
-				<h2>+88 (0) 101 0000 000 <br> +88 (0) 101 0000 000</h2>
+                <h2><a href="mailto:youcancorvallis@gmail.com?Subject=From%20Website" target="_top">YouCANcorvallis@gmail.com</a> <br> PO Box 2526 <br>Corvallis, Oregon 97339</h2>
 			</div>
 		</div>
 
 			<div class="cd-container">		
-				<a href="mailto:youremail@yourdomain.com"><div class="read-more-btn">Shot us an Email</div></a>
+				<a href="mailto:youcancorvallis@gmail.com?Subject=From%20Website"><div class="read-more-btn">Send us an Email</div></a>
 			</div>
 			
 
@@ -83,7 +84,7 @@
 		
 		<div class="footer">
 			<div class="footer-content">
-					<div class="footer-clmn1">© 2014 Designed and Developed by <a href="http://diogodantas.com">Diogo Dantas</a></div>
+					<div class="footer-clmn1">© 2016 Developed by <a href="http://diogodantas.com">Diogo Dantas</a></div>
 					<div class="footer-clmn2">Email: <a href="mailto:imdiogodantas@gmail.com">imdiogodantas@gmail.com</a></div>
 			</div>
 		</div>
