--- a/test.html
+++ b/test.html
@@ -165,7 +165,7 @@
 		</div>
 		
 			<div class="cd-container-blog-read-posts">
-				<a href="#"><div class="read-more-posts-btn">More From Our Blog</div></a>
+				<a href="blog.html"><div class="read-more-posts-btn">More From Our Blog</div></a>
 			</div>
 			
 
@@ -239,8 +239,14 @@
 		
 		<div class="footer">
 			<div class="footer-content">
-					<div class="footer-clmn1">© 2014 Designed and Developed by <a href="http://diogodantas.com">Diogo Dantas</a></div>
-					<div class="footer-clmn2">Email: <a href="mailto:imdiogodantas@gmail.com">imdiogodantas@gmail.com</a></div>
+				<div class="footer-clmn1">
+                    ©2014 Developed by <a href="http://diogodantas.com">Diogo Dantas</a><br><br>
+                    ©2016 Updated by Aaron Kratzer
+                </div>
+				<div class="footer-clmn2">
+                    Email: <a href="mailto:imdiogodantas@gmail.com">imdiogodantas@gmail.com</a><br><br>
+                    Email: <a href="mailto:aaronckratzer@gmail.com">AaronCKratzer@gmail.com</a>
+                </div>
 			</div>
 		</div>
 		
