forcing over any edits--checked for sierra's changes

--- a/test.html
+++ b/test.html
@@ -69,7 +69,7 @@
 		<div class="cd-container">
 			<h4 style="color: rgb(212,175,55);">Youth Climate Action Now</h4>
 			<h1>Share your voice with the world!</h1>
-			<p>As youth, our voice is underrepresented and under asked for in politcs and every other area of society. Yet, voices of youth continue to to be the most powerful and represent the most ambitous generation yet. As youth, it is our responsibility to show the world that we care about the climate and that they should too. Youth Climate Action Now (YouCAN) Corvallis is a campaign that involves youth in policy making and climate activism--leveraging our talents, enthusiasm, and love for the world to shape policy decisions on a local, county, and state level. </p>
+			<p>As youth, our voice is underrepresented and under requested in politcs and every other area of society. Yet, voices of youth continue to to be the most powerful and represent the most ambitous generation yet. It is our responsibility to show the world that we care about the climate and that they should too. Youth Climate Action Now (YouCAN) Corvallis is a campaign that involves youth in policy making and climate activism--leveraging our talents, enthusiasm, and love for the world to shape policy decisions on a local, county, and state level. </p>
 			
 			<a href="about.html"><div class="read-more-btn">Read More About <br>YouCAN Corvallis</div></a>
 		</div>
@@ -119,7 +119,7 @@
 					<div class="cd-container-people-info">
 						<h4>Co-Chair</h4>
 						<h2>Debra Higbee-Sudyka</h2>
-						<p>The Chair of the Corvallis Environmental Action Team of the Seirra Club, Debra has experience in local and state policy making. As the main proponent of the Plastic Bag Ban, she has made fundemental change in our community.</p>
+						<p>The Chair of the Corvallis Environmental Action Team of the Sierra Club, Debra has experience in local and state policy making. As the main proponent of the Plastic Bag Ban, she has made fundamental change in our community.</p>
 					</div>
 				</div>
 				<div class="cd-container-people-clmn-2">
@@ -135,7 +135,7 @@
 					<div class="cd-container-people-info">
 						<h4>Outreach Coordinator</h4>
 						<h2>Sierra Laverty</h2>
-						<p>Being from Idaho and growing up surrounded by activits, organizing for positive change in the community comes natural for Sierra. Ultimately, her goal is to help implament sustainable agriculture around the country, and talking to local goverments is a great way to start!</p>
+						<p>As a sixth generation Idahoan with a family history of both ranching and conservation, Sierra was raised to be a steward of the land. She brings three years of outreach experience to her current role at YouCAN, and is ecstatic to contribute to the Corvallis community by amplifying the voices of youth and young adults.</p>
 					</div>
 				</div>
 			</div>
@@ -157,7 +157,7 @@
 					<div class="cd-container-blog-info">
 						<h4>2 February 2016</h4>
 						<h2>Tell the world!</h2>
-						<p>The City has a group that is worling on climate issues in Corvallis--the Climate Action Task Force (CATF). The YouCAN Corvallis leadership team testified at the CATF meeting about the necessity of legally-binding, science-based emissions reduction targets. Afterward, we got positive feedback from many people in the room, and we plan on coming back often to provide a youth-focused perspective on the task force's work.</p>
+						<p>The City of Corvallis has formed a group that is working on local climate issues--the Climate Action Task Force (CATF). The YouCAN Corvallis leadership team testified at the CATF meeting about the necessity of legally-binding, science-based emissions reduction targets. Afterward we received positive feedback from many people in the room, and we plan on returning often to these meetings to provide a youth-focused perspective on the CATF's work.</p>
 						<a href="#"><div class="read-more-btn-small">Read</div></a>
 					</div>
 				</div>		
