update main index - online edit test

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<link rel="stylesheet" href="css/animated-bg.css"> <!-- Resource style -->
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
   	
-	<title>Elegance Portfolio Template</title>
+	<title>Online GitHub edit</title>
 </head>
 <body>
 	<header class="cd-header">
